CarreraUC endpoint terminado
